Fix blog post spacing.  [#9 state:resolved]
The blog post spacing had been fixed before, but now
it is not spilling over the left side into the user image,
and also the bottom margin is a little more sane.

--- a/pacore/web/Themes/Default/network.css
+++ b/pacore/web/Themes/Default/network.css
@@ -839,6 +839,11 @@ html[xmlns*=""] body:last-child .module_tagcloud ul li span { margin-top: 0px; }
 	margin: 0px;
 }
 
+.blog_inner{
+	padding: 0px 0px 0px 40px;
+	margin-bottom: -20px;
+}
+
 .post_info {
 	margin-top: 20px;
 	color: #7B7B7B; }
